STAN-735 fix focus contrast on homepage links

--- a/ui/components/PhaseBanner/style.module.scss
+++ b/ui/components/PhaseBanner/style.module.scss
@@ -33,5 +33,8 @@
 .bannerLink {
   &.homepage {
     color: white;
+    &:focus {
+      color: black;
+    }
   }
 }
